--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <!-- ========= CUSTOMISE SECTION =========== -->
             <!-- You can change 'Cloud Computing Predict' to 'Your Name' -->
             <!-- The Masthead will then read: '{Your Name} - Project Portfolio' -->
-            <h1 class="masthead-heading text-uppercase mb-0">Kgotso Makhalimele</h1>
+            <h1 class="masthead-heading text-uppercase mb-0">Kgotso Makhalimele - Project Portfolio</h1>
             <!-- ======================================= -->
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
