--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
             <!-- About Section Button-->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light" href="https://github.com/">
+                <a class="btn btn-xl btn-outline-light" href="https://github.com/kgotsosm" target="_blank">
                     <i class="fas fa-download mr-2"></i>
                     Link to My GitHub Account
                 </a>
@@ -295,9 +295,11 @@
                 <div class="col-lg-4">
                     <h4 class="text-uppercase mb-4">Around the Web</h4>
                     <a class="btn btn-outline-light btn-social mx-1"
-                        href="https://www.github.com/kgotsosm"><i class="fab fa-fw fa-github"></i></a>
+                        href="https://www.github.com/kgotsosm" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/kgotso-makhalimele/" target="_blank"><i
                             class="fab fa-fw fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/kgotso-makhalimele/" target="_blank"><i
+                        class="fab fa-fw fa-medium"></i></a>
                 </div>
                 <!-- ======================================= -->
             </div>
@@ -305,7 +307,7 @@
     </footer>
     <!-- Copyright Section-->
     <div class="copyright py-4 text-center text-white">
-        <div class="container"><small>Copyright © Your Website 2021</small></div>
+        <div class="container"><small>Copyright © Kgotso Makhalimele 2023</small></div>
     </div>
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
     <div class="scroll-to-top d-lg-none position-fixed">
